fixing invisible dropdown being clickable

--- a/components/modules/DropdownMenu.module.css
+++ b/components/modules/DropdownMenu.module.css
@@ -11,8 +11,6 @@
   top: 6rem;
   left: 0;
 
-  z-index: 999;
-
   display: flex;
   align-items: center;
   justify-content: center;
@@ -24,6 +22,8 @@
 
   overflow: hidden;
 
+  z-index: 999;
+  pointer-events: none;
   opacity: 0;
   visibility: hidden;
   transform: scale(0.95);
@@ -33,6 +33,8 @@
 }
 
 .visible {
+  z-index: 999;
+  pointer-events: all;
   visibility: visible;
   opacity: 1;
   transform: scale(1);
